--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "jest-localstorage-mock": "^2.2.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.5.0"
   }
